--- a/index.html
+++ b/index.html
@@ -14,10 +14,46 @@
             <h1>Library</h1>
         </div>
         <div class="header-buttons">
-            <button>+ NEW BOOK</button>
-            <button>RESET</button>
+            <button class="new-book">+ NEW BOOK</button>
+            <button class="reset">RESET</button>
         </div>
     </header>
+    <main>
+        <div class="book-cards">
+            <div>
+                <h3>Title: The Hobbit</h3>
+                <h4>Author: J.R.R. Tolkien</h4>
+                <p>Pages: 295</p>
+                <p>Read</p>
+                <button class="remove-card-button">Remove</button>
+            </div>
+        </div>
+    </main>
+    <div class="form-container form-hidden">
+        <h2>Add New Book</h2>
+        <form>
+            <div class ="input-container">
+                <label for="title">Title</label>
+                <input type="text" id="title" name="title" required>   
+            </div>
+            <div class="input-container">
+                <label for="author">Author</label>
+                <input type="text" id="author" name="author" required>   
+            </div>
+            <div class="input-container">
+                <label for="pages">Number of pages</label>
+                <input type="tel" id="pages" name="pages" required> 
+            </div>
+            <div class="checkbox">
+                <label for="read">Have you read this book?</label>
+                <input type="checkbox" id="read" name="read">
+            </div>
+                <div class="input-container">
+                <input type="button" value="Submit">
+            </div>
+        </form>
+    </div>
+    <div class="overlay"></div>
 <script src="script.js"></script>
 </body>
 </html>
