--- a/index.html
+++ b/index.html
@@ -20,19 +20,20 @@
     </header>
     <main>
         <div class="book-cards">
-            <div>
+            <div class="green-border">
                 <h3>Title: The Hobbit</h3>
                 <h4>Author: J.R.R. Tolkien</h4>
                 <p>Pages: 295</p>
-                <p>Read</p>
+                <button class="Read">Read</button>
+                <br>
                 <button class="remove-card-button">Remove</button>
             </div>
         </div>
     </main>
     <div class="form-container form-hidden">
         <h2>Add New Book</h2>
-        <form>
-            <div class ="input-container">
+        <form class="new-book-form">
+            <div class="input-container">
                 <label for="title">Title</label>
                 <input type="text" id="title" name="title" required>   
             </div>
@@ -49,7 +50,7 @@
                 <input type="checkbox" id="read" name="read">
             </div>
                 <div class="input-container">
-                <input type="button" value="Submit">
+                <input type="submit" value="Submit">
             </div>
         </form>
     </div>
